[gd_scene load_steps=28 format=2]

[ext_resource path="res://characterSelect.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Skins/P1.png" type="Texture" id=3]
[ext_resource path="res://Skins/P1S.png" type="Texture" id=4]
[ext_resource path="res://Skins/P1H.png" type="Texture" id=5]
[ext_resource path="res://Skins/P2.png" type="Texture" id=6]
[ext_resource path="res://Skins/P2S.png" type="Texture" id=7]
[ext_resource path="res://Skins/P2H.png" type="Texture" id=8]
[ext_resource path="res://Skins/P3.png" type="Texture" id=9]
[ext_resource path="res://Skins/P3S.png" type="Texture" id=10]
[ext_resource path="res://Skins/P3H.png" type="Texture" id=11]
[ext_resource path="res://Skins/P4.png" type="Texture" id=12]
[ext_resource path="res://Skins/P4S.png" type="Texture" id=13]
[ext_resource path="res://Skins/P4H.png" type="Texture" id=14]
[ext_resource path="res://Skins/W1.png" type="Texture" id=15]
[ext_resource path="res://Skins/W1S.png" type="Texture" id=16]
[ext_resource path="res://Skins/W1H.png" type="Texture" id=17]
[ext_resource path="res://Skins/W2.png" type="Texture" id=18]
[ext_resource path="res://Skins/W2S.png" type="Texture" id=19]
[ext_resource path="res://Skins/W2H.png" type="Texture" id=20]
[ext_resource path="res://Skins/W3.png" type="Texture" id=21]
[ext_resource path="res://Skins/W3S.png" type="Texture" id=22]
[ext_resource path="res://Skins/W3H.png" type="Texture" id=23]
[ext_resource path="res://Skins/W4.png" type="Texture" id=24]
[ext_resource path="res://Skins/W4S.png" type="Texture" id=25]
[ext_resource path="res://Skins/W4H.png" type="Texture" id=26]
[ext_resource path="res://TitleScreenRelated/cursor100.png" type="Texture" id=27]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 94.0
margin_top = 48.0
margin_right = 706.0
margin_bottom = 752.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="Text1" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "PRISONER"

[node name="Prisoner" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 612.0
margin_bottom = 282.0

[node name="Skin1" type="TextureButton" parent="MarginContainer/VBoxContainer/Prisoner"]
margin_right = 150.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Skin2" type="TextureButton" parent="MarginContainer/VBoxContainer/Prisoner"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Skin3" type="TextureButton" parent="MarginContainer/VBoxContainer/Prisoner"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Skin4" type="TextureButton" parent="MarginContainer/VBoxContainer/Prisoner"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="Text2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 612.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 2 )
text = "WARDEN"

[node name="Warden" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 612.0
margin_bottom = 584.0

[node name="W1" type="TextureButton" parent="MarginContainer/VBoxContainer/Warden"]
margin_right = 150.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="W2" type="TextureButton" parent="MarginContainer/VBoxContainer/Warden"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )

[node name="W3" type="TextureButton" parent="MarginContainer/VBoxContainer/Warden"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )

[node name="W4" type="TextureButton" parent="MarginContainer/VBoxContainer/Warden"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 26 )

[node name="back" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 604.0
margin_right = 612.0
margin_bottom = 704.0
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 27 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/back"]
margin_left = 100.0
margin_right = 234.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Prisoner/Skin1" to="." method="_on_Skin1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Prisoner/Skin2" to="." method="_on_Skin2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Prisoner/Skin3" to="." method="_on_Skin3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Prisoner/Skin4" to="." method="_on_Skin4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Warden/W1" to="." method="_on_W1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Warden/W2" to="." method="_on_W2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Warden/W3" to="." method="_on_W3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Warden/W4" to="." method="_on_W4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
